# OnKiAlgo

./: .clang-format  CMakeLists.txt  README.rst
.github/workflows/: linux.yml  windows.yml
cmake/: OnKiAlgo-config.cmake.in  Sanitizers.cmake
include/OnKiAlgo/: arange.hpp  bring_to_front.hpp  container_factory.hpp  copy_until.hpp  distribution.hpp  find_if.hpp  generic_helpers.hpp  is_std_array.hpp  linspace.hpp  repeat.hpp  round.hpp  scale.hpp  slice.hpp  slide.hpp
include/OnKiAlgo/geo2d/: line.hpp
test/: CMakeLists.txt  arange_tests.cpp  bring_to_front_tests.cpp  container_factory_tests.cpp  copy_until_tests.cpp  distribution_tests.cpp  generic_helpers_tests.cpp  is_std_array_tests.cpp  linspace_tests.cpp  repeat_tests.cpp  round_tests.cpp  scale_tests.cpp  slice_tests.cpp  slide_tests.cpp
test/geo2d/: line_tests.cpp
